parser/tests/bad/expr08-2.st
% 'boolean' expression must have type 'bool'
%   parenthesized expression

if (1) then
  % empty
end if
